change package molex/yii2-rajaongkir to molexdev/yii2-rajaongkir

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "molex/yii2-rajaongkir",
+    "name": "molexdev/yii2-rajaongkir",
     "description": "Yii2 Component - Client for RajaOngkir API",
     "keywords": [
         "yii",
